--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^2.10.3",
+    "@tailwindcss/typography": "^0.5.2",
+    "autoprefixer": "^10.4.4",
+    "aws-amplify": "^4.3.16",
     "next": "12.1.0",
+    "postcss": "^8.4.12",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-markdown": "^8.0.1",
+    "react-simplemde-editor": "^5.0.2",
+    "tailwindcss": "^3.0.23",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "8.11.0",
