create post added bugged

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -8,10 +8,19 @@
           "defaultAuthentication": {
             "authenticationType": "API_KEY",
             "apiKeyConfig": {
-              "apiKeyExpirationDays": 7
+              "apiKeyExpirationDays": 365,
+              "apiKeyExpirationDate": "2023-03-22T13:58:46.271Z",
+              "description": "public"
             }
           },
-          "additionalAuthenticationProviders": []
+          "additionalAuthenticationProviders": [
+            {
+              "authenticationType": "AMAZON_COGNITO_USER_POOLS",
+              "userPoolConfig": {
+                "userPoolId": "authamplifyblogfb670841"
+              }
+            }
+          ]
         }
       }
     }
