--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-amplify/ui-react": "^2.10.3",
     "@tailwindcss/typography": "^0.5.2",
     "aws-amplify": "^4.3.16",
+    "easymde": "^2.16.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
